# pyMBE

./: .gitignore  .gitmodules  .pylintrc  CONTRIBUTING.md  MANIFEST.in  README.md  anaconda-project-lock.yml  anaconda-project.yml  dodo.py  pyproject.toml  setup.cfg  setup.py
.github/: .condarc  environment.yml
.github/workflows/: ci.yml
dev_doc/: Core Technologies.ipynb  New Kerbal.json  Playbook Explorer Parts Test IBD.ipynb  Playbook Explorer Parts Test.ipynb  Playbook Explorer Val Case 2a.ipynb  Playbook Explorer.ipynb  SysML Model.ipynb  Unit Test Data Download.ipynb
dev_docs/: DevDocs_README.MD  Purpose.MD
dev_docs/core_algos/: Adding New Model Elements.ipynb  Annex A Execution.ipynb  Derived Properties.ipynb  Inspecting Ecore file.ipynb  Labeling.ipynb  Library Explorer Base.ipynb  Library Explorer SysML.ipynb  Library Explorer.ipynb  Model Entailment 1.ipynb  Model Entailment 3.ipynb  Model Entailment2.ipynb  Model Unrolling 1.ipynb  Playing with Clocks.ipynb
dev_docs/core_algos/annex_a_data/: A-2-Atoms.json  A-3-2-WithoutConnectors.json  A-3-3-OneToOneConnectors.json  A-3-6-aSequences.json
dev_docs/core_algos/metamodel/: sysml_ecore_atts.json  sysml_ecore_derived_refs.json
dev_docs/data_loading/: Demonstrating PyMBE with Library.ipynb  Derived Attributes.ipynb  Load Boat Example.ipynb  Pythonic SysML Elements.ipynb
dev_docs/data_loading/canonical_data/: Concept of Operations Case.json  Model_Loader_Literal_Test.json  Model_Loader_Test_Level_1.json
dev_docs/data_loading/example_data/: Clean_Bicycle.json  downloaded_elements.json
dev_docs/functionality/: Adding New Model Elements.ipynb  Annex A Execution.ipynb  Assigning Values to SysML Features.ipynb  Expressions in SysML.ipynb  Labeling.ipynb  Library Explorer.ipynb  Model Entailment 3.ipynb  Model Entailment2.ipynb  SysML Trace Execution.ipynb
dev_docs/functionality/annex_a_data/: A-3-6-Sequences.json  A-3-6-aSequences-User-Only.json
dev_docs/functionality/metamodel/: sysml_ecore_derived_refs.json
dev_docs/functionality/sysml_data/: UserModelTrialLoops.json
dev_docs/infrastructure/: Creating API JSON files from Eclipse.ipynb  Inspecting Ecore file.ipynb  Pythonic SysML Elements.ipynb  Talking to File Sources.ipynb  Talking to REST API Sources.ipynb  Talking to SysML v2 Jupyter Kernel.ipynb
dev_docs/infrastructure/canonical_data/: Model_Loader_Test_Level_2.json  Model_Loader_Test_Level_3.json
dev_docs/infrastructure/metamodel/: attribute_metadata.json
dev_docs/sysml_repos/: Talking to File Sources.ipynb  Talking to REST API Sources.ipynb  Talking to SysML v2 Jupyter Kernel.ipynb
docs/: Playbook Explorer Actions Test.ipynb  README.md
docs/experimental/: Circuit Topology.ipynb  Example Model Interpretation.ipynb  Experiments.ipynb  LPG Play.ipynb  OpenMDAO.ipynb  Playbook Explorer Parts Test IBD.ipynb
docs/explanatory/: Circuit Permutations.ipynb  Expression Basics at M0.ipynb  Feature Basics at M0.ipynb
docs/how_to_guides/: Playbook Explorer Validation Case 2a.ipynb  Playbook Explorer.ipynb  SysML Model.ipynb  Understanding Test Approach.ipynb
docs/reference/: Core Technologies.ipynb  Library Crawler.ipynb
docs/tutorials/: 01-Basic.ipynb
docs/use_cases/: Car Charger Modelica.ipynb
model_interpretation/: interpretation.py  model_loading.py  widget.py
notebooks/: Block Diagram Experiments.ipynb  Example Model Interpretation.ipynb  Experiments.ipynb  KerML Nested Features.ipynb  Kerbal Model v2.ipynb  Kerbal Model with Libraries.ipynb  Kerbal Model.ipynb  LPG Play.ipynb  Short Name Generator.ipynb  Tutorial [WIP].ipynb  Tutorial.ipynb  Widget Experiment.ipynb
src/pymbe/: __init__.py  api.py  client.py  core.py  expression_builder.py  graph.py  interpretation.py  label.py  metamodel.py  model.py  model_loading.py  model_modification.py  original_interpretation.py  text_concrete_syntax.py  widget.py
src/pymbe/graph/: __init__.py  calc_lpg.py  edge_generators.py  filter_lib.py  lpg.py  rdf.py  sysml_adapters.yml  sysml_subgraphs.yml
src/pymbe/interpretation/: calc_dependencies.py  execute_kerml_atoms.py  forward_run_simulation.py  indeterminate_boundaries.py  interp_playbooks.py  interpretation.py  m0_operators.py  occurrences_steps.py  results.py  set_builders.py  working_maps.py
src/pymbe/local/: bundle.py  stablization.py
src/pymbe/query/: metamodel_navigator.py  query.py
src/pymbe/static_data/: Base Try 2.json  Base.json  sysml_ecore_atts.json
src/pymbe/widget/: client.py  containment.py  core.py  diagram.py  explorer.py  graph.py  inspector.py  interpretation.py  labeling.py  ui.py
src/pymbe/widget/diagram/: __init__.py  interpretation.py  loader.py  part_diagram.py  parts.py  relationships.py  symbols.py  tools.py  utils.py  widget.py
tests/: conftest.py  data_loader.py  test_client_downloading.py
tests/client/: test_client_loading.py
tests/data/Kerbal/: elements.json
tests/data/Parts Structure Unit Test/: elements.json
tests/data/Simple Actions Model/: elements.json
tests/data/Simple Parts Model/: elements.json
tests/data/Validation Case 2a/: elements.json
tests/fixtures/: data_loader.py
tests/graph/: test_graph_breakdown.py  test_graph_load.py  test_graph_solve.py  test_lpg.py
tests/interpretation/: test_calculation_ordering.py  test_feature_sequencing.py  test_graph_orderings.py  test_graph_visit_orderings.py  test_playbook_phases.py  test_set_builders.py
tests/jupyter/: test_notebooks.py
tests/jupyter/notebooks/: Playbook Explorer Actions Test.ipynb  Playbook Explorer Parts Test.ipynb
tests/model/: lifecycle_utils.py  test_class_and_relation_creation.py  test_derived_attributes.py  test_element_build_from_data.py  test_feature_redefinition.py  test_instantiation.py  test_kerml_links_load.py  test_kerml_load.py  test_kerml_type_load.py  test_labeling.py  test_model.py  test_perform_self_references_creation.py  test_performance_creation.py  test_pythonic_navigation.py  test_trace_patterns.py  test_working_maps.py
tests/query/: test_feature_queries.py
tests/widgets/: test_notebooks.py
