[metadata]
name = pymbe
description = A pythonic Model-based Engineering framework based on SysML v2
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bjorncole/pymbe
project_urls =
    Bug Tracker     = https://github.com/bjorncole/pymbe/issues
    Changelog       = https://github.com/bjorncole/pymbe/blob/master/CHANGELOG.md
    CI              = TBD
    Documentation   = TBD
    Releases        = https://github.com/bjorncole/pymbe/releases
    Source Code     = https://github.com/bjorncole/pymbe

author = Bjorn Cole
author_email = bjorn.cole@gmail.com
license = GPLv3
keywords =
    Model-based, SysML, Engineering
license_file = LICENSE
classifiers =
    Development Status :: 1 - Planning
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Model-based Engineers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3) 
    Programming Language :: Python
    Topic :: Scientific/Engineering

[options]
python_requires = >=3.6
install_requires =
    jupyterlab >=3.0,<4.0
    ipyelk >=1.0,<2.0
    matplotlib
    networkx >=2.0,<3.0
    numpy >=1.20,<2.0
    pip
    wheel

package_dir =
    = src
include_package_data = True
zip_safe = False

[options.extras_require]
tests =
    pytest
binder =
    importnb
    cycler
    dask
    dask-labextension
    dask-ml
    distributed
    ipympl
    lime
    matplotlib
    scikit-image
    skikit-learn
    scikit-mdr
    skrebate
    tpot
    umap-learn
    yellowbrick
thirdparty =
    bqplot
    datashader
    hvplot
    ipycytoscape
    ipylab
all =
    %(binder)s
    %(thirdparty)s

[options.packages.find]
where =
    src

[flake8]
exclude = .git,__pycache__,envs
max-line-length = 88

[tool:pytest]
junit_family = xunit2

