[metadata]
name = pymbe
description = A pythonic Model-based Engineering framework based on SysML v2
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bjorncole/pymbe
project_urls =
    Bug Tracker     = https://github.com/bjorncole/pymbe/issues
    Changelog       = https://github.com/bjorncole/pymbe/blob/master/CHANGELOG.md
    CI              = TBD
    Documentation   = TBD
    Releases        = https://github.com/bjorncole/pymbe/releases
    Source Code     = https://github.com/bjorncole/pymbe

author = Bjorn Cole
author_email = bjorn.cole@gmail.com
license = GPLv3
keywords =
    Model-based, SysML, Engineering
license_file = LICENSE
classifiers =
    Development Status :: 1 - Planning
    Framework :: Jupyter
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3) 
    Programming Language :: Python
    Topic :: Scientific/Engineering

[options]
python_requires = >=3.6
install_requires =
    ipyelk >=1.0,<2
    ipytree >=1.0,<2
    jupyterlab >=3.0,<4
    matplotlib
    networkx >=2.0,<3
    numpy >=1.20,<2
    openmdao >=3.0,<4
    pyld
    rdflib
    rdflib-jsonld
    ruamel.yaml

package_dir =
    = src
include_package_data = True
zip_safe = False

[options.extras_require]
develop =
    black
    coverage
    isort
    pytest
    pytest-cov
thirdparty =
    bqplot
    ipycytoscape
all =
    %(develop)s
    %(thirdparty)s

[options.packages.find]
where =
    src

[flake8]
exclude = .git,__pycache__,envs
max-line-length = 88

[isort]
src_paths=src

[tool:pytest]
addopts = -rsxX -q --cov=pymbe --cov-report=html
junit_family = xunit2
testpaths =
    src/
    tests/
norecursedirs = envs/*
