[metadata]
name = pymbe
description = A pythonic Model-based Engineering framework based on SysML v2
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bjorncole/pymbe
project_urls =
    Bug Tracker     = https://github.com/bjorncole/pymbe/issues
    Changelog       = https://github.com/bjorncole/pymbe/blob/master/CHANGELOG.md
    CI              = TBD
    Documentation   = TBD
    Releases        = https://github.com/bjorncole/pymbe/releases
    Source Code     = https://github.com/bjorncole/pymbe

author = Bjorn Cole
author_email = bjorn.cole@gmail.com
license = GPLv3
keywords =
    Model-based, SysML, Engineering
license_file = LICENSE
classifiers =
    Development Status :: 1 - Planning
    Framework :: Jupyter
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3) 
    Programming Language :: Python
    Topic :: Scientific/Engineering

[options]
python_requires = >=3.6
install_requires =
    ipyelk >=1.0,<3
    ipytree >=1.0,<2
    jupyterlab >=3.0,<4
    matplotlib
    networkx >=2.0,<3
    numpy >=1.20,<2
    openmdao >=3.0,<4
    pyld
    rdflib
    rdflib-jsonld
    ruamel.yaml

package_dir =
    = src
include_package_data = True
zip_safe = False

[options.extras_require]
develop =
    ansi2html
    black
    coverage
    isort
    pytest
    pytest-asyncio
    pytest-cov
    pytest-html
    pytest-xdist
thirdparty =
    bqplot
    ipycytoscape
all =
    %(develop)s
    %(thirdparty)s

[options.packages.find]
where =
    src

[flake8]
exclude =
    .git
    __pycache__
    envs
extend-ignore = E203, W503
max-line-length = 88

[isort]
profile = black
known_first_party = pymbe
ensure_newline_before_comments = True
force_grid_wrap = 0
include_trailing_comma = True
line_length = 88
multi_line_output = 3
skip_glob =
    tests/fixtures/**
    envs/**
src_paths =
    scripts/**
    src/pymbe/**
    tests/**
use_parentheses = True

[tool:pytest]
junit_family = xunit2
addopts =
    -vv
    --ff
    --pyargs pymbe
    --cov pymbe
    --cov-report term-missing:skip-covered
    --cov-report html:build/htmlcov
    --cov-report xml:build/cov.xml
    --no-cov-on-fail
    --html build/pytest.html
    --self-contained-html
    --junitxml build/pytest.xunit.xml
testpaths =
    src/
    tests/
norecursedirs =
    envs/*
    scripts/*
